--- a/application/admin/view/addon/index.html
+++ b/application/admin/view/addon/index.html
@@ -29,7 +29,7 @@
 </script>
 
 <script type="text/html" id="nameTpl">
-    <a href="/addons/{{d.name}}" class="layui-table-link">{{d.name}}</a>
+    <a href="/addons/{{d.name}}" target="_blank" class="layui-table-link">{{d.name}}</a>
 </script>
 
 <!--操作-->
