生成二维码

--- a/addons/qrcode/view/index/index.html
+++ b/addons/qrcode/view/index/index.html
@@ -99,10 +99,10 @@
                         </div>
                     </div>
                     <div class="layui-input-block">
-                        <div class="footer footer-common">
+                        <!--<div class="footer">-->
                             <button class="layui-btn layui-btn-sm" type="submit" lay-submit="" lay-filter="component-form-element">生成二维码</button>
                             <button type="reset" class="layui-btn  layui-btn-sm">重置</button>
-                        </div>
+                        <!--</div>-->
                     </div>
                 </form>
             </div>
