--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -41,6 +41,17 @@
                 <dd><a href="javascript:;" data-type="log">清除日志缓存</a></dd>
             </dl>
         </li>
+
+        <li class="layui-nav-item layui-hide-xs" lay-unselect>
+            <a href="javascript:;" layadmin-event="lang">
+                中/EN
+            </a>
+            <dl class="layui-nav-child lang">
+                <dd><a href="javascript:;" data-type="zh-cn">中文简体</a></dd>
+                <dd><a href="javascript:;" data-type="en-us">English</a></dd>
+            </dl>
+        </li>
+
         <li class="layui-nav-item layui-hide-xs" lay-unselect>
             <a href="javascript:;" layadmin-event="fullscreen">
                 <i class="layui-icon layui-icon-screen-full"></i>
