--- a/application/admin/view/common/script.html
+++ b/application/admin/view/common/script.html
@@ -27,6 +27,13 @@
                 }
             });
         });
+
+        //语言切换
+        $(document).on('click', "dl.lang dd a", function () {
+           var lang_type = $(this).attr("data-type");
+           window.location = "{$this_url}?lang=" + lang_type;
+        });
+
     });
 </script>
 </body>
